customer.java class